Fix: spinner should align centrally

--- a/src/components/img/_spinner.scss
+++ b/src/components/img/_spinner.scss
@@ -2,7 +2,7 @@
 //        @include
 @mixin spinner($size: 48px, $color: #aaa, $delay: 1s, $speed: 1s) {
   display: inline-block;
-  position: relative;
+  //position: relative;
 
   &:after {
     // Size:
